--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/nuxt": "^11.3.0",
     "nuxt": "^3.14.1592",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "@nuxtjs/i18n": "8.5.2"
   }
 }
