--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "cleanup": "nuxt cleanup",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.2",
-    "@regle/core": "0.2.5",
-    "@regle/rules": "0.2.5",
+    "@regle/core": "0.2.6",
+    "@regle/rules": "0.2.6",
     "@vueuse/core": "^11.3.0",
     "@vueuse/nuxt": "^11.3.0",
     "nuxt": "^3.14.1592",
